[project]
name = "reflex-plot"
version = "0.1.0"
description = "Plot your dataframe with reflex!"
authors = [
    { name = "Luciano Scarpulla", email = "66913960+lucianosrp@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["reflex>=0.5.9"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lucianosrp/reflex-plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "inline-snapshot>=0.13.3",
    "pandas>=2.2.2",
    "pytest-coverage>=0.0",
    "pytest>=8.3.2",
]

[tool.hatch.build]
exclude = ["/.*", "/docs", "/tests", "/examples", "reflex-plot-example"]

[tool.hatch.build.targets.wheel]
packages = ["src/reflex_plot"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-fail-under=100"

[project.entry-points.pandas_plotting_backends]
reflex = "reflex_plot:pd_backend"
